add style em js

--- a/read-com-get.html
+++ b/read-com-get.html
@@ -45,7 +45,8 @@
 
         }
     });            
-        
     </script>
-</body>
+
+    <script src="./assets/scripts/estilo.js"></script>
+  </body>
 </html>
