criação Delete com Delete

--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Interação com APIs</title>
 </head>
 <body>
- 
+ <ul>
+    <li><a href="./create-com-post.html">Create com POST</a></li>
+    <li><a href="./read-com-get.html">Read com GET</a></li>
+    <li><a href="./update-com-put.html">Update com PUT</a></li>
+ </ul>
+
+ <script src="./assets/scripts/estilo.js"></script>
 </body>
 </html> 
