--- a/update-com-put.html
+++ b/update-com-put.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>interação com APIs | create com post</title>
+    <title>interação com APIs | update com PUT</title>
 </head>
 <body>
     <header>
         <a href="./">Home</a>
-        <h1>create com POST</h1>
+        <h1>update com PUT</h1>
     </header>
 
       <form action="" method="post">
 
         <label for="id">id:</label>
-        <input type="text" id="id" disabled><br>
+        <input type="text" id="id" ><br>
 
         <label for="descricao">descrição:</label>
         <input type="text" id="descricao"><br>
@@ -22,7 +22,7 @@
         <label for="preco">preço:</label>
         <input type="text" id="preco"><br>
 
-        <button type="button" id="btCadastrar">cadastrar</button>
+        <button type="button" id="btAtualizar">atualizar</button>
 
       </form>
 
@@ -30,7 +30,7 @@
 
     <script>
        
-       document.querySelector('#btCadastrar').addEventListener('click',()=>{
+       document.querySelector('#btAtualizar').addEventListener('click',()=>{
 
         const dados = {
             'id': null,
@@ -38,8 +38,11 @@
             'preco': document.querySelector('#preco').value
         }
 
-        fetch('http://localhost:3000/produtos',{
-            method: 'post',
+        const id = document.querySelector('#id').value;
+
+
+        fetch(`http://localhost:3000/produtos/${id}`,{
+            method: 'PUT',
             headers: {
                 'content-type': 'application/json'
             },
@@ -47,7 +50,8 @@
         })
         .then(resposta => {
             if(resposta.ok) {
-                alert('produto cadastrado')
+                alert('produto atualizado');
+                Location.reload();
             }
         });
 
