DELETE com DELETE

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <li><a href="./create-com-post.html">Create com POST</a></li>
     <li><a href="./read-com-get.html">Read com GET</a></li>
     <li><a href="./update-com-put.html">Update com PUT</a></li>
+    <li><a href="./delete-com-delete.html">Delete com Delete</a></li>
  </ul>
 
  <script src="./assets/scripts/estilo.js"></script>
