--- a/update-com-put.html
+++ b/update-com-put.html
@@ -13,16 +13,16 @@
 
       <form action="" method="post">
 
-        <label for="id">id:</label>
+        <label for="id">ID:</label>
         <input type="text" id="id" ><br>
 
-        <label for="descricao">descrição:</label>
+        <label for="descricao">Descrição:</label>
         <input type="text" id="descricao"><br>
 
-        <label for="preco">preço:</label>
+        <label for="preco">Preço:</label>
         <input type="text" id="preco"><br>
 
-        <button type="button" id="btAtualizar">atualizar</button>
+        <button type="button" id="btAtualizar">Atualizar</button>
 
       </form>
 
