padronizando igual figma

--- a/create-com-post.html
+++ b/create-com-post.html
@@ -11,18 +11,18 @@
         <h1>create com POST</h1>
     </header>
 
-      <form action="" method="post">
+      <form class="container" action="" method="post">
 
-        <label for="id">id:</label>
-        <input type="text" id="id" disabled><br>
+        <label class="child" for="id">id:</label>
+        <input class="input" type="text" id="id" disabled><br>
 
-        <label for="descricao">descrição:</label>
-        <input type="text" id="descricao"><br>
+        <label class="child" for="descricao">descrição:</label>
+        <input class="input" type="text" id="descricao"><br>
 
-        <label for="preco">preço:</label>
-        <input type="text" id="preco"><br>
+        <label class="child" for="preco">preço:</label>
+        <input class="input" type="text" id="preco"><br>
 
-        <button type="button" id="btCadastrar">cadastrar</button>
+        <button class="bt" type="button" id="btCadastrar">cadastrar</button>
 
       </form>
 
