--- a/update-com-put.html
+++ b/update-com-put.html
@@ -11,18 +11,18 @@
         <h1>update com PUT</h1>
     </header>
 
-      <form action="" method="post">
+      <form class="container" action="" method="post">
 
-        <label for="id">ID:</label>
-        <input type="text" id="id" ><br>
+        <label class="child" for="id">ID:</label>
+        <input class="input" type="text" id="id" ><br>
 
-        <label for="descricao">Descrição:</label>
-        <input type="text" id="descricao"><br>
+        <label class="child" for="descricao">Descrição:</label>
+        <input class="input" type="text" id="descricao"><br>
 
-        <label for="preco">Preço:</label>
-        <input type="text" id="preco"><br>
+        <label class="child" for="preco">Preço:</label>
+        <input class="input" type="text" id="preco"><br>
 
-        <button type="button" id="btAtualizar">Atualizar</button>
+        <button class="bt" type="button" id="btAtualizar">Atualizar</button>
 
       </form>
 
