--- a/create-com-post.html
+++ b/create-com-post.html
@@ -22,12 +22,12 @@
            <input type="text" id="id" disabled>
           </div>
   
-          <div class="">
+          <div class="entrada-formulario">
            <label for="descricao">Descrição:</label>
            <input type="text" id="descricao" placeholder="digite a descrição do produto">
           </div>
   
-          <div class="">
+          <div class="entrada-formulario">
            <label class="child" for="preco">Preço:</label>
            <input class="input" type="text" id="preco" placeholder="digite a descrição do produto">
           </div>
@@ -41,7 +41,9 @@
   
       </div>
 
-      <div id="listaProdutos"></div>
+      <div id="listaProdutos">
+        <h2 class="titulo-lista">Lista de Produtos</h2>
+      </div>
 
     <script>
        
